// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormElement  should render correctly 1`] = `
<WithStyles(FormElement)
  elementStatus="valid"
  elementValue="George"
>
  <WithStyles(HvLabelText)
    id="label-id"
    key="1"
    label="First name"
  >
    <WithStyles(HvBaseInput)
      id="id-input"
      placeholder="Insert your name"
    />
  </WithStyles(HvLabelText)>
  <WithStyles(HvInfoText)
    id="infotext-main-standby"
    key="2"
    label="Write your name in this input do not put numbers"
    showWhen="standBy"
  />
  <WithStyles(HvInfoText)
    id="infotext-main-valid"
    key="3"
    label="Your value is valid"
    showWhen="valid"
  />
  <WithStyles(HvErrorText)
    id="error-text-main"
    key="4"
    label="Names do not contain numbers"
    showWhen="invalid"
  />
</WithStyles(FormElement)>
`;

exports[`FormElement  should render correctly 2`] = `
<WithStyles(HvBaseInput)
  id="id-input"
  placeholder="Insert your name"
/>
`;

exports[`FormElement  should render correctly 3`] = `
Array [
  <WithStyles(HvInfoText)
    id="infotext-main-standby"
    key="2"
    label="Write your name in this input do not put numbers"
    showWhen="standBy"
  />,
  <WithStyles(HvInfoText)
    id="infotext-main-valid"
    key="3"
    label="Your value is valid"
    showWhen="valid"
  />,
]
`;
